--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,7 @@ set-option -sa terminal-overrides "xterm*:ritm=\e[23m"
 set-option -g display-time 5000
 set-option -g history-limit 10000
 set-option -g mouse on
+set-option -g allow-passthrough on
 
 set-option -g set-titles on                  # set title of iterm2 window and touch bar
 set-option -g set-titles-string "#S:#I:#W"   # shorter than the default
