--- a/.gitconfig
+++ b/.gitconfig
@@ -42,3 +42,10 @@
 	diffFilter = delta --color-only --features=interactive
 [delta]
 	navigate = true
+[lfs]
+	locksverify = false
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
