Pause signing commits for now

--- a/.gitconfig
+++ b/.gitconfig
@@ -49,7 +49,7 @@
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 	process = git-lfs filter-process
-[commit]
-	gpgsign = true
+; [commit]
+; 	gpgsign = true
 [push]
 	autoSetupRemote = true
