--- a/ansible/playbooks/main.yml
+++ b/ansible/playbooks/main.yml
@@ -69,6 +69,7 @@
           - grpcurl
           - jq
           - kube-ps1
+          - kubectx
           - kubernetes-cli
           - less
           - maven
@@ -84,8 +85,8 @@
           - vim
           - yamllint
           - zsh
-          - zsh-syntax-highlighting
           - zsh-autosuggestions
+          - zsh-syntax-highlighting
           # - zsh-completions  TODO needs setup
       register: brew_res
 
