--- a/.gitconfig
+++ b/.gitconfig
@@ -56,5 +56,6 @@
 	format = ssh
 [gpg "ssh"]
 	program = /Applications/1Password.app/Contents/MacOS/op-ssh-sign
+	allowedSignersFile = /Users/lepistone/.ssh/allowed_signers
 [commit]
 	gpgsign = true
