--- a/ansible/playbooks/main.yml
+++ b/ansible/playbooks/main.yml
@@ -60,6 +60,7 @@
           - bash
           - bat
           - bazelisk
+          - buildifier
           - cookiecutter
           - curl
           - fd
